--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "bcryptjs": "2.4.3",
     "bluebird": "3.5.1",
     "body-parser": "1.18.3",
-    "bookshelf": "0.13.3",
+    "bookshelf": "https://github.com/bookshelf/bookshelf/tarball/903ec1fe0bc59ec4de987c2cdfd07c07398e6a8b",
     "bookshelf-relations": "0.2.1",
     "brute-knex": "3.0.0",
     "bson-objectid": "1.2.3",
