--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.24.8",
   "description": "The professional publishing platform",
   "author": "Ghost Foundation",
-  "homepage": "http://ghost.org",
+  "homepage": "https://ghost.org",
   "keywords": [
     "ghost",
     "blog",
