--- a/package.json
+++ b/package.json
@@ -121,6 +121,8 @@
   "devDependencies": {
     "eslint": "5.12.1",
     "eslint-plugin-ghost": "0.1.0",
+    "eslint-plugin-json": "1.3.2",
+    "fkill": "^5.3.0",
     "grunt": "1.0.3",
     "grunt-bg-shell": "2.3.3",
     "grunt-cli": "1.3.2",
@@ -142,6 +144,7 @@
     "mocha": "5.2.0",
     "mock-knex": "0.4.3",
     "nock": "10.0.6",
+    "portfinder": "1.0.20",
     "proxyquire": "2.1.0",
     "rewire": "4.0.1",
     "should": "13.2.3",
