--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "sqlite3": "4.0.6"
   },
   "devDependencies": {
+    "@tryghost/admin-api": "^0.4.0",
     "eslint": "5.12.1",
     "eslint-plugin-ghost": "0.1.0",
     "eslint-plugin-json": "1.3.2",
